# bkbk

./: .gitignore  README.md  pyproject.toml
config/: asset_normalization.yaml  basemap.yaml  cache.yaml  data_acquisition_rules.yaml  data_acquisition_rules_submission.yaml  data_acquisition_rules_submission_dia.yaml  figure_style.yaml  kosis_datasets.yaml  wms_layers.yaml
docs/: 11_execution_plan.md
scripts/: annotate_image.py  antigravity_queue_docx_to_pdf.py  antigravity_run_docx_to_pdf.py  autofill_parcels_jimok_from_ocr.py  autofill_parcels_zoning_bulk.py  build_ssot_catalog_and_reuse_status.py  compose_callout_composite.py  coverage_matrix_auto_fill_from_suggestions.py  coverage_matrix_auto_status.py  doctor_env.py  extract_overlay_polygons.py  extract_pdf_index.py  extract_pdf_index_twopass.py  find_sparse_pages_in_pdf.py  fix_missing_sources.py  geojson_to_annotations.py  make_annotated_figure_from_case.py  make_appendix_inserts_from_pdf.py  make_callout_composite_from_case.py  make_case_input_portal.py  make_case_xlsx.py  make_coverage_matrix_seed.py  make_coverage_need_tickets.py  make_dia_template.py  make_mask_annotated_figure_from_case.py  make_template.py  make_template_sample_changwon_2025.py  mask_to_polygons.py  ocr_pdf_page_titles.py  pdf_layout_similarity.py  plan_progress.py  postprocess_docx_to_pdf.py  qa_data_requests_summary.py  qa_next_actions.py  qa_ssot_overrides_summary.py  run_quality_gates.py  run_regression_gates.py  set_docx_page_setup.py  smoke_check.py  ssot_page_override_wizard.py  (+5 more)
spec/: figure_specs.yaml  sections.yaml  (+2 more)
(+75 files in other folders)
